force-app/main/default/objects/Account/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <description>To Make Client Coordinator read only on Client /Inactive/PBB Layouts of client
Case : C-00001104</description>
    <formula>HYPERLINK(&quot;/&quot;&amp;Owner.Id,Owner.FirstName + &apos; &apos; + Owner.LastName,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Person that is responsible for the management of the overall relationship with a Client.
Client Coordinator changes can only be facilitated by an administrator.</inlineHelpText>
    <label>Client Coordinator</label>
    <type>Text</type>
</CustomField>