force-app/main/default/objects/Account/fields/Account_Tier__c.field-meta.xml
<CustomField>
    <fullName>Account_Tier__c</fullName>
    <description>Was &quot;GM Account Tier&quot; prior to Feb &apos;08 Go-Live with GM
Changed from &quot;Account Tier&quot; to &quot;CIB Tier&quot;
Field Label Rename from &apos;CIB Tier&apos; to &apos;Global Tier&apos;, Nov &apos;10.
01/2011: Added New Picklist Values &apos;Core, Opportunistic, Growth, Not Assigned&apos;</description>
    <inlineHelpText>Core - Strategic Relationship, Transact Multiple Products, Allocate Majority of Financial Resources.
Growth - Mapping of Strategy &amp; Needs indicate Future Core Client.
Opportunistic - Once-Off Opportunities.</inlineHelpText>
    <label>Global Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>Opportunistic</fullName>
            </value>
            <value>
                <fullName>Growth</fullName>
            </value>
            <value>
                <fullName>Not Assigned</fullName>
                <default>true</default>
                <label>Not Assigned</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>