force-app/main/default/objects/Account/fields/Actual_CY_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Actual_CY_Revenue__c</fullName>
    <description>EN-0695-Total Revenue rolled up to Client in ZAR</description>
    <inlineHelpText>The actual rolled up Client Revenue (Year to Date in ZAR)</inlineHelpText>
    <label>Actual CY Revenue (ZAR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>