force-app/main/default/objects/Account/fields/Adaptive_Flag__c.field-meta.xml
<CustomField>
    <fullName>Adaptive_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field flags a client if client is in adaptive field which is part of the adaptive integration</description>
    <label>Adaptive Flag</label>
    <type>Checkbox</type>
</CustomField>