force-app/main/default/objects/Account/fields/AGM_Status__c.field-meta.xml
<CustomField>
    <fullName>AGM_Status__c</fullName>
    <description>US-3868 Strategic Categorization (AGM) of the clients</description>
    <inlineHelpText>Acquire – Clients we don’t bank with;
Grow – Client with potential growth;
Maintain – Maintain current relationship;
One CIB – Existing global clients;
Blank – Not categorised</inlineHelpText>
    <label>AGM Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acquire</fullName>
            </value>
            <value>
                <fullName>Grow</fullName>
            </value>
            <value>
                <fullName>Maintain</fullName>
            </value>
            <value>
                <fullName>One CIB</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>