force-app/main/default/objects/Account/fields/Anticipated_Level_Volume_of_Activity__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Level_Volume_of_Activity__c</fullName>
    <description>Anticipated Level / Volume of Activity</description>
    <inlineHelpText>The expected level or volume of business to be conducted with Standard Bank</inlineHelpText>
    <label>Anticipated Level / Volume of Activity</label>
    <length>200</length>
    <type>Text</type>
</CustomField>