force-app/main/default/objects/Account/fields/api_Address_Line_One__c.field-meta.xml
<CustomField>
    <fullName>api_Address_Line_One__c</fullName>
    <label>api Address Line One</label>
    <length>40</length>
    <type>Text</type>
</CustomField>