force-app/main/default/objects/Account/fields/api_Address_State__c.field-meta.xml
<CustomField>
    <fullName>api_Address_State__c</fullName>
    <label>api Address State</label>
    <length>40</length>
    <type>Text</type>
</CustomField>