force-app/main/default/objects/Account/fields/api_Client_Type__c.field-meta.xml
<CustomField>
    <fullName>api_Client_Type__c</fullName>
    <label>api Client Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>