force-app/main/default/objects/Account/fields/ApprovalProcessId__c.field-meta.xml
<CustomField>
    <fullName>ApprovalProcessId__c</fullName>
    <label>ApprovalProcessId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>