force-app/main/default/objects/Account/fields/AUM__c.field-meta.xml
<CustomField>
    <fullName>AUM__c</fullName>
    <description>US-1981: FAIS - To store FAIS related information in SF : FAIS Status, NAV, AUM and FAIS Review Date</description>
    <inlineHelpText>This is the currency field holding Asset Under Management value for the asset management clients</inlineHelpText>
    <label>Asset Under Management</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>