force-app/main/default/objects/Account/fields/BEE_Code__c.field-meta.xml
<CustomField>
    <fullName>BEE_Code__c</fullName>
    <description>This field will determine the BEE code of client, at this point this is only valid to CommB</description>
    <inlineHelpText>BEE Codes refer to the percentage of B-BBEE Ownership</inlineHelpText>
    <label>BEE Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Asian Companies 100% Owned</fullName>
            </value>
            <value>
                <fullName>Black Companies 100% Owned</fullName>
            </value>
            <value>
                <fullName>Black Empowered Entity 25% to 50% Owned</fullName>
            </value>
            <value>
                <fullName>Black Influenced Entity 5% to 25% Owned</fullName>
            </value>
            <value>
                <fullName>Black Influenced Entity 5% to 25 % Owned</fullName>
            </value>
            <value>
                <fullName>Black Owned Entity &gt; 50% Owned</fullName>
            </value>
            <value>
                <fullName>Black-Owned Entity &gt; 50% Owned</fullName>
            </value>
            <value>
                <fullName>Black Women-Empowered Companies &gt; 50% Owned</fullName>
            </value>
            <value>
                <fullName>Chinese Owned</fullName>
            </value>
            <value>
                <fullName>Coloured Companies 100% Owned</fullName>
            </value>
            <value>
                <fullName>Non BEE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>