force-app/main/default/objects/Account/fields/BEE_Level__c.field-meta.xml
<CustomField>
    <fullName>BEE_Level__c</fullName>
    <description>This field will indicate client BEE level, this is only applicable to commB</description>
    <inlineHelpText>A reflection of the level of compliance to the B-BBEE Act</inlineHelpText>
    <label>BEE Level</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>BEE_Code__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Level 1 Contributor</fullName>
            </value>
            <value>
                <fullName>Level 2 Contributor</fullName>
            </value>
            <value>
                <fullName>Level 3 Contributor</fullName>
            </value>
            <value>
                <fullName>Level 4 Contributor</fullName>
            </value>
            <value>
                <fullName>Level 5 Contributor</fullName>
            </value>
            <value>
                <fullName>Level 6 Contributor</fullName>
            </value>
            <value>
                <fullName>Level 7 Contributor</fullName>
            </value>
            <value>
                <fullName>Level 8 Contributor</fullName>
            </value>
            <value>
                <fullName>Non-Compliant Contributor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>