force-app/main/default/objects/Account/fields/Black_Economic_Empowerment__c.field-meta.xml
<CustomField>
    <fullName>Black_Economic_Empowerment__c</fullName>
    <inlineHelpText>Is this a Black Economic Empowerment Client? (CIBSA specific)</inlineHelpText>
    <label>BEE</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>