force-app/main/default/objects/Account/fields/BPID__c.field-meta.xml
<CustomField>
    <fullName>BPID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <inlineHelpText>Business Partner Identity, the unique number provided to each entity by which we identify each client.</inlineHelpText>
    <label>BPID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>