force-app/main/default/objects/Account/fields/Business_Classification__c.field-meta.xml
<CustomField>
    <fullName>Business_Classification__c</fullName>
    <description>Business Classification</description>
    <inlineHelpText>Additional definition of the type of business that the Client is</inlineHelpText>
    <label>Business Classification</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Client_Type_OnBoard__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Branch</fullName>
            </value>
            <value>
                <fullName>Central Bank</fullName>
            </value>
            <value>
                <fullName>Charity</fullName>
            </value>
            <value>
                <fullName>Corporation</fullName>
            </value>
            <value>
                <fullName>Foundation</fullName>
            </value>
            <value>
                <fullName>Fund</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Informal Body</fullName>
            </value>
            <value>
                <fullName>Joint Venture</fullName>
            </value>
            <value>
                <fullName>Local Authority</fullName>
            </value>
            <value>
                <fullName>Non-Profit Organisation</fullName>
            </value>
            <value>
                <fullName>Parastatal</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Professional Partnership</fullName>
            </value>
            <value>
                <fullName>Public Authority</fullName>
            </value>
            <value>
                <fullName>Public Sector Body</fullName>
            </value>
            <value>
                <fullName>Section 21 / Non Profit Company</fullName>
            </value>
            <value>
                <fullName>Sole Proprietor</fullName>
            </value>
            <value>
                <fullName>Sovereign Wealth Fund</fullName>
            </value>
            <value>
                <fullName>State Owned Company</fullName>
            </value>
            <value>
                <fullName>Supranational Organisation</fullName>
            </value>
            <value>
                <fullName>Trust</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>