force-app/main/default/objects/Account/fields/Business_Relationship_Inconsistent__c.field-meta.xml
<CustomField>
    <fullName>Business_Relationship_Inconsistent__c</fullName>
    <description>Is the Nature of Business and Nature of Relationship Inconsistent</description>
    <inlineHelpText>Is the Nature of Business and Nature of Relationship Inconsistent</inlineHelpText>
    <label>Business/Relationship Inconsistent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>