force-app/main/default/objects/Account/fields/Business_Support_and_Recovery__c.field-meta.xml
<CustomField>
    <fullName>Business_Support_and_Recovery__c</fullName>
    <inlineHelpText>Is the client under debt administration?</inlineHelpText>
    <label>Business Support and Recovery</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>