force-app/main/default/objects/Account/fields/Capital_Labour_Intensity__c.field-meta.xml
<CustomField>
    <fullName>Capital_Labour_Intensity__c</fullName>
    <description>SFP-9319 [c] This field is introduced for CVCA feature to allow printable view of the Client Page similar to the CVCA Template.</description>
    <inlineHelpText>An indication of whether the industry is either capital or labour intensive in nature and some information as to why this is the case</inlineHelpText>
    <label>Capital / Labour Intensity</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>