force-app/main/default/objects/Account/fields/Challenges_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Challenges_Opportunities__c</fullName>
    <description>SFP-9319 [c] User needs to indicate any challenges/opportunities identified with client</description>
    <inlineHelpText>Challenges faced in operating environment (internally or externally driven)? Opportunities present in industry? Outlook for the medium to long term? Can the Bank help resolve some challenges, add value and help client leverage opportunities in sector?</inlineHelpText>
    <label>Challenges/Opportunities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>