force-app/main/default/objects/Account/fields/Chinese_Segment__c.field-meta.xml
<CustomField>
    <fullName>Chinese_Segment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to define Clients that make up the portfolio of Clients for the Client Coverage Chinese Segment team. This field is used for backend reporting purposes only and is updated using a dataload.</description>
    <inlineHelpText>Client that belongs in the Chinese Segment potfolio</inlineHelpText>
    <label>Chinese Segment</label>
    <type>Checkbox</type>
</CustomField>