force-app/main/default/objects/Account/fields/CIB_Service_Tier__c.field-meta.xml
<CustomField>
    <fullName>CIB_Service_Tier__c</fullName>
    <description>Defines assigned client service level as per the client service model US-4653</description>
    <inlineHelpText>Defines the assigned client service level as per the client service model</inlineHelpText>
    <label>CIB Service Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CIB_Service_Tier</valueSetName>
    </valueSet>
</CustomField>