force-app/main/default/objects/Account/fields/CIB_Target_Client__c.field-meta.xml
<CustomField>
    <fullName>CIB_Target_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <description>These are clients as identified during the budget process. (US-2236)</description>
    <inlineHelpText>These are clients as identified during the budget process</inlineHelpText>
    <label>Individually Budgeted Client (IBC)</label>
    <type>Checkbox</type>
</CustomField>