force-app/main/default/objects/Account/fields/CIB_Target_Client_Formula__c.field-meta.xml
<CustomField>
    <fullName>CIB_Target_Client_Formula__c</fullName>
    <description>These are clients as identified during the budget process. Formula Converts to &quot;Yes&quot;/&quot;No&quot; Text value (US-2236)</description>
    <formula>IF( CIB_Target_Client__c = True, &quot;Yes&quot;, &quot;No&quot;)</formula>
    <inlineHelpText>These are clients as identified during the budget process.</inlineHelpText>
    <label>Individually Budgeted Client Formula</label>
    <type>Text</type>
</CustomField>