force-app/main/default/objects/Account/fields/CIB_Target_Client_Previous_Year__c.field-meta.xml
<CustomField>
    <fullName>CIB_Target_Client_Previous_Year__c</fullName>
    <defaultValue>false</defaultValue>
    <description>These are clients that were identified during the prior years budget process. (US-2236)</description>
    <inlineHelpText>These are clients as identified during the prior years budget process.</inlineHelpText>
    <label>Individually Budgeted Client–Prior Year</label>
    <type>Checkbox</type>
</CustomField>