force-app/main/default/objects/Account/fields/CIF__c.field-meta.xml
<CustomField>
    <fullName>CIF__c</fullName>
    <description>Label changed from CIF to CIF Number</description>
    <externalId>true</externalId>
    <label>CIF Number</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>