force-app/main/default/objects/Account/fields/CIF_Client_Active_Code__c.field-meta.xml
<CustomField>
    <fullName>CIF_Client_Active_Code__c</fullName>
    <description>Case 4948 - Added values P and Potential</description>
    <label>CIF Client Active Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>I</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>P</fullName>
            </value>
            <value>
                <fullName>Potential</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>