force-app/main/default/objects/Account/fields/CIF_Client_Industry_Sector__c.field-meta.xml
<CustomField>
    <fullName>CIF_Client_Industry_Sector__c</fullName>
    <label>CRT Client Industry Sector</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Asset Managers</fullName>
            </value>
            <value>
                <fullName>Corporates</fullName>
            </value>
            <value>
                <fullName>Financial Institutions</fullName>
            </value>
            <value>
                <fullName>Insurance &amp; Pension Funds</fullName>
            </value>
            <value>
                <fullName>Official Institutions</fullName>
            </value>
            <value>
                <fullName>Private Clients</fullName>
            </value>
            <value>
                <fullName>Unknown Sector</fullName>
                <default>true</default>
                <label>Unknown Sector</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>