force-app/main/default/objects/Account/fields/CIF_Client_Status__c.field-meta.xml
<CustomField>
    <fullName>CIF_Client_Status__c</fullName>
    <description>Case 4948 - Changed formula to derive Potential from the CIF Client Active Code of P</description>
    <formula>CASE( CIF_Client_Active_Code__c ,
&quot;A&quot;,&quot;Open&quot;,
&quot;I&quot;,&quot;Closed&quot;,
&quot;P&quot;,&quot;Potential&quot;,
&quot;Active&quot;,&quot;Open&quot;,
&quot;Inactive&quot;,&quot;Closed&quot;,
&quot;Potential&quot;,&quot;Potential&quot;,
&quot;Unknown&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CIF Client Status</label>
    <type>Text</type>
</CustomField>