force-app/main/default/objects/Account/fields/CIF_Client_Type__c.field-meta.xml
<CustomField>
    <fullName>CIF_Client_Type__c</fullName>
    <description>This Field has been created to reflect the &quot;R&quot; or &quot;W&quot; value from the CIF feed into Salesforce. R = Retail (clients owned by Personal Business Banking and W = Wholesale (clients owned by CIB Coverage) Case #252</description>
    <inlineHelpText>R = Retail (PBB) and W = Wholesale (CIB)</inlineHelpText>
    <label>CIF Client Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>