force-app/main/default/objects/Account/fields/CIF_Customer_Reporting_Country_Resp__c.field-meta.xml
<CustomField>
    <fullName>CIF_Customer_Reporting_Country_Resp__c</fullName>
    <label>CIF Customer Reporting Country Resp</label>
    <length>100</length>
    <type>Text</type>
</CustomField>