force-app/main/default/objects/Account/fields/CIF_Inactive_Indicator__c.field-meta.xml
<CustomField>
    <fullName>CIF_Inactive_Indicator__c</fullName>
    <description>Displays an Red Visual Indicator for Inactive CIF Clients.</description>
    <formula>Image(
Case(CIF_Client_Status__c,
&quot;Closed&quot;,&quot;/img/samples/flag_red.gif&quot;,
&quot;Open&quot;,&quot;/img/samples/flag_green.gif&quot;,
&quot;/img/samples/flag_yellow.gif&quot;),
CIF_Client_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CIF Active Indicator</label>
    <type>Text</type>
</CustomField>