force-app/main/default/objects/Account/fields/CIF_Number_Allocated_date__c.field-meta.xml
<CustomField>
    <fullName>CIF_Number_Allocated_date__c</fullName>
    <description>This is the Date and Time value of first update of the CIF Number.(EN-0798)</description>
    <label>CIF Number Allocated Date</label>
    <type>Date</type>
</CustomField>