force-app/main/default/objects/Account/fields/CIF_Number_of_Proposed_Immediate_Parent__c.field-meta.xml
<CustomField>
    <fullName>CIF_Number_of_Proposed_Immediate_Parent__c</fullName>
    <description>This field will be populated with the CIF Number of the Proposed Immediate Parent for hierarchy reporting purposes, for Clients onboarded in SFDC only. (EN-0786)</description>
    <label>CIF Number of Proposed Immediate Parent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>