force-app/main/default/objects/Account/fields/Client_Co_ordinator__c.field-meta.xml
<CustomField>
    <fullName>Client_Co_ordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>New CC field created to be used for onboarding purposes (EN-0731)</description>
    <inlineHelpText>The suggested Client Coordinator responsible for the Bank’s relationship with the Client. Must be part of the division selected as the Primary Relationship Holder. This can only be changed by the CRM Helpdesk once approved.</inlineHelpText>
    <label>Proposed Client Coordinator</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Only active users and users within the following User Divisions: Corporate Banking, Global Markets, Investment Banking, Transactional Products and Services, General Management, Real Estate can be searched.</errorMessage>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>User.User_Division__c</field>
            <operation>contains</operation>
            <value>Corporate Banking, Global Markets, Investment Banking, Transactional Products and Services, General Management, Real Estate</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>