force-app/main/default/objects/Account/fields/Client_contacted_in_person__c.field-meta.xml
<CustomField>
    <fullName>Client_contacted_in_person__c</fullName>
    <inlineHelpText>Was the client met in person at client&apos;s trading/registered address?</inlineHelpText>
    <label>Met Client in Person</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>