force-app/main/default/objects/Account/fields/Client_Coordinator_Country__c.field-meta.xml
<CustomField>
    <fullName>Client_Coordinator_Country__c</fullName>
    <description>SFP-12157 [f] Field reads the Client Coordinator&apos;s User Franco from the User Record.</description>
    <formula>TEXT(Owner.User_Franco__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Coordinator Country</label>
    <type>Text</type>
</CustomField>