force-app/main/default/objects/Account/fields/Client_Coordinator_Division__c.field-meta.xml
<CustomField>
    <fullName>Client_Coordinator_Division__c</fullName>
    <description>This field will capture the Client Coordinator&apos;s user divsion value, EN-0731</description>
    <formula>TEXT(Owner.User_Division__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Coordinator Division</label>
    <type>Text</type>
</CustomField>