force-app/main/default/objects/Account/fields/Client_Coordinator_Email__c.field-meta.xml
<CustomField>
    <fullName>Client_Coordinator_Email__c</fullName>
    <description>It captures the prospect&apos;s Email Id</description>
    <label>Client Coordinator Email</label>
    <type>Email</type>
</CustomField>