force-app/main/default/objects/Account/fields/Client_Coordinator_Exists__c.field-meta.xml
<CustomField>
    <fullName>Client_Coordinator_Exists__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Developer field to see if Client Coordinator Exists</description>
    <label>Client Coordinator Exists</label>
    <type>Checkbox</type>
</CustomField>