force-app/main/default/objects/Account/fields/Client_Coordinator_from_CDG__c.field-meta.xml
<CustomField>
    <fullName>Client_Coordinator_from_CDG__c</fullName>
    <description>Client Coordinator First and Last Name received from CDG</description>
    <inlineHelpText>Field used to match CDG Client Coordinator value with an active Salesforce User</inlineHelpText>
    <label>Client Coordinator from CDG</label>
    <length>80</length>
    <type>Text</type>
</CustomField>