force-app/main/default/objects/Account/fields/Client_Coordinator_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Coordinator_Name__c</fullName>
    <description>It is used to record the client co-ordinator&apos;s name</description>
    <formula>Client_Co_ordinator__r.FirstName+&apos; &apos;+Client_Co_ordinator__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Coordinator Name</label>
    <type>Text</type>
</CustomField>