force-app/main/default/objects/Account/fields/Client_Current_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Client_Current_Relationship__c</fullName>
    <description>Case#1263 - Rudolf Niehaus
Current interactions, Recent successes, Issues we are facing and plans to address, Credit Exposure per product</description>
    <inlineHelpText>A summary of current product activity, recent successes, issues we are facing and plans to address with the Client (2100 characters or less)</inlineHelpText>
    <label>Client Current Relationship</label>
    <length>2111</length>
    <type>LongTextArea</type>
</CustomField>